[project]
name = "comfyui-camerareference3d"
description = "Camera-motion reference nodes for LTX IC-LoRA guides: CameraReference3D (parametric moves through a neutral 3D corridor) plus RenderSplatPath / RenderSplatCinematic (render a static Gaussian splat along bounded / cinematic camera paths instead of a forced 360 turntable)."
version = "2.7.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["numpy", "Pillow"]

[project.urls]
Repository = "https://github.com/lovemachine100/ComfyUI-CameraReference3D"

[tool.comfy]
PublisherId = "kongo_jun"
DisplayName = "Camera Reference (3D)"
Icon = ""
